# mitatete

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  character.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/hooks/: format-on-edit.mjs
.claude/reports/: 2026-06-27-bootstrap-and-orchestration.md  2026-06-27-character-layer-impl.md  2026-06-27-model-router-impl.md  2026-06-27-product-state-and-handoff.md  2026-06-27-storage-manager-impl.md  2026-06-28-a3-theme-toggle.md  2026-06-28-design-system-import.md  2026-06-28-diary-engine-impl.md  2026-06-28-team-retrospective.md  2026-06-28-ui-restyle-2-impl.md  2026-06-28-ui-restyle-impl.md  README.md
.claude/rules/: README.md  design-review.md  (+2 more)
.serena/: project.yml
design/: SOURCE.md  readme.md  styles.css
docs/: concept.md  design-brief.md  e2e-setup.md  status-dashboard.html
e2e/: app.e2e.ts  wdio.conf.ts
public/: theme-init.js
scripts/: _wt-status.sh  dev-dashboard.sh  swarm-down.sh  swarm-up.sh
src/: character-editor.dom.test.ts  character-editor.test.ts  character-editor.ts  character-store.test.ts  character-store.ts  character-ui.dom.test.ts  character-ui.test.ts  character-ui.ts  character-validator.test.ts  character-validator.ts  character-visual-editor.dom.test.ts  character-visual-editor.test.ts  character-visual-editor.ts  character.html  character.ts  chat.test.ts  chat.ts  diary-prompt.test.ts  diary-prompt.ts  diary.test.ts  diary.ts  fonts.css  icons.ts  index.html  main.ts  model-ui.ts  principles.test.ts  principles.ts  styles.css  theme-toggle.dom.test.ts  theme.ts  tokens.css  ui-restyle.dom.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: key_manager.rs  lib.rs  main.rs  model_router.rs  storage.rs
src-tauri/src/snapshots/: mitatete_lib__model_router__tests__build_system_prompt_snapshot.snap
(+52 files in other folders)
