[package]
name = "mitatete"
version = "0.1.0"
description = "AIモデルを「見立て」によって擬人化し、人間とAIの心理的距離を縮めるTauri製デスクトップアプリ"
authors = ["kumamoto-kouki"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Tauri v2 慣習: ライブラリクレートに run() を置き、main.rs から呼ぶ
name = "mitatete_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: キャラクターウィンドウの透明化（tauri.conf.json の macOSPrivateApi）に必要
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 非同期ランタイム（ファイル I/O・HTTP クライアント用）
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "time", "macros"] }

# HTTP クライアント（Google Drive API 呼び出し用）
# rustls-tls: OpenSSL などのネイティブ依存を避けクロスプラットフォームを保証する
reqwest = { version = "0.13", features = ["rustls", "json"], default-features = false }

# OAuth 2.0 フロー（Google 認証用）
oauth2 = "5.0"

# OS キーチェーン（OAuth トークンのセキュア保存用）
# デフォルト features（v1 + プラットフォーム別ストア）でクロスプラットフォームをカバー
keyring = "4"
